# oxydoro

./: Cargo.toml  README.md  build.rs
proto/oxydoro/: oxydoro.proto
src/: client.rs  gui-client.rs  server.rs
