[package]
name = "oxydoro"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tonic = "0.3"
tokio = { version = "0.2", features = ["macros", "time"] }
prost = "0.6"
clap = "3.0.0-beta.1"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }
